tester/testsuite/extensions/objects1/bad/bad004.jl
/* class extends itself */

class Vehicle extends Vehicle {

}

int main() {
    return 1;
}
